@@ -40,6 +40,27 @@ filename.scanner.language.detection=true
 filename.scanner.skip.keywords=LIMITED,LiMiTED,Limited,DiAMOND,AXXO,PUKKA,iDHD,PROPER,REPACK,DSR,STV,UNRATED,RERIP
 
 
+
+######################################################
+## Poster scanner
+# specifies if we should look for an existing covert art file
+# Valid values are : no, moviename, fixedcoverartname 
+poster.scanner.searchForExistingCoverArt=moviename
+
+# specifies the valid extension for covert art files
+# Valid values is a coma separated list of extension  
+poster.scanner.coverArtExtensions=jpg,jpeg,gif,bmp,png
+
+# If poster.scanner.searchForExistingCoverart=fixedcoverartname
+# specifies the basename of the covert art file 
+# examples of value : folder, covert, poster... 
+#poster.scanner.fixedCoverArtName=folder
+
+# specifies the subdirectory where to look for covertArt
+# Valid values is a directory name relative to the movie file 
+# comment this if the covertArt is stored in the same directory as movie
+#poster.scanner.coverArtDirectory=Images
+
 ######################################################
 ## IMDb plugin parameters
 #
