@@ -17,7 +17,9 @@ MovieJukebox 1.0.12 beta
   - Fixed defect #188 Runtime is sometimes showing up as UNKNOWN
   - Enhancement #189 Hungarian flag support
     Also resizing of other SD flags
-
+  - Enhancement #181 Support of local stored coverarts instead of search for them on the internet
+  - Enhancement #201 Download of coverArt on temp directory instead of final Jukebox Directory
+   
 MovieJukebox 1.0.11 beta
 -----------------------
   - Enhancement Issue #78 Custom coverart Enhancement
